--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     width: 100%;
