--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     background-color: #232333;
-    height: 100vh;
+    height: 100%;
 }
 hr{
     margin: 0;
