--- a/src/styles/MainContent.module.scss
+++ b/src/styles/MainContent.module.scss
@@ -1,20 +1,106 @@
+@import 'vars.scss';
+
 .mainContent{
   width: 100%;
-  background-color: red;
-  height: calc(100vh - 102px);
+  height: calc(100% - 102px);
   margin: 0;
   padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(center,start);
+  flex-direction: column;
+  gap: 20px;
   .contentCards{
     width: 80%;
-    background-color: black;
-    height: calc(100vh - 162px);
-    display: grid;
-    grid-template-areas:
-            'card1 card2 card3'
-            'card1'
-  ;
+    height: calc(65vh - 162px);
+    @include flex(start , center);
+    gap: 20px
+  }
+  .chips{
+    width: 60%;
+    background-color: $cardBgC;
+    min-height: 300px;
+    border-radius: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.125rem 0.375rem;
+    text-align: center;
+    color: $textColor;
+    h3{
+      font-size: 30px;
+    }
+    .features{
+      @include flex(start , center);
+      gap: 50px;
+      width: 100%;
+      margin-bottom: 30px;
+      .feature{
+        @include flex(center , center);
+        flex-direction: column;
+        svg{
+          fill: $textColor;
+        }
+        p{
+          width: 140px;
+          font-size: 14px;
+        }
+      }
+  }
+  }
+  .interface{
+    text-align: center;
+    color: $textColor;
+    h2{
+      font-size: 30px;
+    }
+  }
+  .aboutUs{
+    width: 60%;
+    @include flex(center , space-between);
+    gap: 40px;
+    .aboutblock{
+      height: 240px;
+      text-align: center;
+      @include flex(center ,start);
+      width: 23%;
+      background-color: $cardBgC;
+      border-radius: 0.5rem;
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 0.125rem 0.375rem;
+      flex-direction: column;
+      padding: 20px 0 20px 0;
+      h3{
+        margin-top: 5px;
+        color: $textColor;
+        font-size:26px;
+        margin-bottom: 10px;
+      }
+      p{
+        color:  $textColor;
+
+        width: 130px;
+      }
+      svg{
+        fill:  $textColor;
+      }
+    }
+  }
+  .contactUs{
+    margin-top: 20px;
+    height: 200px;
+    width: 60%;
+    background-color: $cardBgC;
+    margin-bottom: 30px;
+    border-radius: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.125rem 0.375rem;
+    text-align: center;
+    h3{
+      color:  $textColor;
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+    p{
+      color:  $textColor;
+      font-size: 18px;
+
+    }
+    a{
+      color: #0081bd
+    }
   }
 }
