--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 30px;
     flex-direction: column;
     align-items: center;
     width: 100%;
