--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -50,5 +50,24 @@
       }
     }
   }
+}
 
+@media (max-width:'650px') {
+  .navbar{
+    .leftsidebar{
+      .contactUs{
+        width: 50px;
+        padding: 0;
+        margin: 0;
+        p{
+          display: none;
+        }
+      }
+    }
+  }
+}
+@media (max-width:'450px') {
+  .navbar{
+    width: 95%;
+  }
 }
