--- a/src/styles/MainContent.module.scss
+++ b/src/styles/MainContent.module.scss
@@ -109,14 +109,14 @@
     }
   }
   .aboutUs{
-    width: 50%;
+    width: 60%;
     @include flex(center , space-between);
     gap: 40px;
     .aboutblock{
-      height: 260px;
+      height: 320px;
       text-align: center;
       @include flex(center ,start);
-      width: 23%;
+      width: 40%;
       gap: 10px;
       flex-direction: column;
       padding: 20px 0 20px 0;
@@ -138,7 +138,6 @@
     }
   }
   .contactUs{
-    margin-top: 20px;
     height: 200px;
     width: 60%;
     background-color: $cardBgC;
@@ -173,9 +172,14 @@
         gap: 40px;
       }
     }
+    .quality{
+      padding: 20px 0;
+    }
     .aboutUs{
       flex-direction: column;
+      gap:0;
       .aboutblock{
+        height: 270px;
         width: 100%;
         h3{
           width: 100%;
@@ -188,6 +192,35 @@
       padding-bottom: 20px;
       padding-left: 10px;
       padding-right: 10px;
+    }
+  }
+}
+@media(max-width:'500px') {
+  .mainContent{
+    .header{
+      .content{
+        width: 80%;
+        h3{
+          font-size: 2rem;
+        }
+      }
+    }
+    .chips{
+      width: 80%;
+    }
+    .quality{
+      padding: 20px 0;
+      .content{
+        width: 80%;
+      }
+    }
+    .aboutUs{
+        .aboutblock{
+          height: 100%;
+        }
+    }
+    .contactUs{
+
     }
   }
 }
