--- a/src/styles/MainContent.module.scss
+++ b/src/styles/MainContent.module.scss
@@ -43,7 +43,7 @@
       margin-bottom: 10px;
     }
     h4{
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       margin-top: 15px;
       margin-bottom: 15px;
 
@@ -52,7 +52,7 @@
       width: 50%;
       margin: 0 auto;
       margin-bottom: 10px;
-      font-size: 1.1rem;
+      font-size: 1.3rem;
 
     }
     .features{
@@ -72,7 +72,7 @@
         }
         p{
           width: 240px;
-          font-size: 1.1rem;
+          font-size: 1.3rem;
         }
       }
     }
@@ -94,10 +94,10 @@
       }
       h5{
         margin-top: 10px;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
       }
       p{
-        font-size: 1.1rem;
+        font-size: 1.2rem;
       }
     }
   }
@@ -120,8 +120,10 @@
         margin-bottom: 0px;
       }
       p{
+        margin-top: 0;
         color:  #fff;
-        width: 130px;
+        width: 180px;
+        font-size: 1.2rem;
       }
       svg{
         width: 60px;
@@ -164,7 +166,7 @@
             margin-bottom: 0;
             word-wrap: break-word;
             margin-bottom: 17.6px;
-
+            font-size: 1.2rem;
           }
         }
       }
