--- a/src/styles/MainContent.module.scss
+++ b/src/styles/MainContent.module.scss
@@ -3,18 +3,15 @@
 .mainContent{
   width: 100%;
   height: calc(100% - 102px);
-  margin: 0;
-  padding: 0;
   @include flex(center,start);
   flex-direction: column;
   gap: 20px;
+  z-index: 1;
   .header{
     width: 100%;
     height: 300px;
     background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("../img/office.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
-    background-position: top;
     @include flex(center,center);
     .content{
       width: 60%;
@@ -27,15 +24,8 @@
       }
     }
   }
-  .contentCards{
-    width: 60%;
-    height: calc(65vh - 162px);
-    @include flex(start , center);
-    gap: 20px
-  }
   .chips{
     width: 60%;
-
     text-align: center;
     color: #fff;
     h3{
@@ -46,14 +36,12 @@
       font-size: 1.5rem;
       margin-top: 15px;
       margin-bottom: 15px;
-
     }
     p{
       width: 50%;
       margin: 0 auto;
       margin-bottom: 10px;
       font-size: 1.3rem;
-
     }
     .features{
       @include flex(start , center);
@@ -63,7 +51,6 @@
       color: #fff;
       .feature{
       margin-top: 40px;
-
         @include flex(center , center);
         flex-direction: column;
         gap:10px;
@@ -102,14 +89,15 @@
     }
   }
   .aboutUs{
-    width: 60%;
-    @include flex(center , space-between);
-    gap: 40px;
+    width: 80%;
+    @include flex(center , center);
+    z-index: 1;
+    
     .aboutblock{
       height: 260px;
       text-align: center;
       @include flex(center ,start);
-      width: 40%;
+      width: 23%;
       gap: 10px;
       flex-direction: column;
       padding: 20px 0 0 0;
@@ -192,20 +180,20 @@
     text-align: center;
     h3{
       color:  #fff;
-      font-size: 32px;
+      font-size: 2rem;
       margin-bottom: 10px;
     }
     p{
       color:  #fff;
-      font-size: 18px;
-
+      font-size: 1.3rem;
     }
     a{
-      color: #65e4f0
+      color: #65e4f0;
+      font-size: 1.1rem;
     }
   }
 }
-@media(max-width:'900px') {
+@media(max-width:'940px') {
   .mainContent{
     .chips{
       p{
