--- a/src/styles/MainContent.module.scss
+++ b/src/styles/MainContent.module.scss
@@ -178,12 +178,16 @@
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.125rem 0.375rem;
     text-align: center;
+    @include flex(center,center);
+    flex-direction: column;
     h3{
+      margin-top: 0;
       color:  #fff;
       font-size: 2rem;
       margin-bottom: 10px;
     }
     p{
+      width: 90%;
       color:  #fff;
       font-size: 1.3rem;
     }
@@ -193,7 +197,7 @@
     }
   }
 }
-@media(max-width:'940px') {
+@media(max-width:'980px') {
   .mainContent{
     .chips{
       p{
@@ -238,7 +242,7 @@
     }
   }
 }
-@media(max-width:'500px') {
+@media(max-width:'595px') {
   .mainContent{
     .header{
       .content{
@@ -250,6 +254,9 @@
     }
     .chips{
       width: 80%;
+      p{
+        width: 90%;
+      }
     }
     .quality{
       padding: 20px 0;
